# moe-5g-nrx

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CURRENT.md  PROBLEM.md  README.md  main.py  pyproject.toml
conf/: config.yaml
docs/: MoE-roadmap.md  Projekt.md  Proposal.md  Research-positioning.md  checkpoint_report.html  checkpoint_report.md  defense_brief.md  defense_brief_cz.md  defense_presentation.html  defense_presentation.ipynb  final_draft.md  sprint_2026-04-30.html  sprint_2026-04-30.ipynb  teacher_feedback_2026-04-30.md
experiments/: README.md  template.sh
notebooks/: explore_synthetic_dataset.ipynb
poster/: .gitignore  Makefile  poster.tex
report/: .gitignore  projekt-01-kapitoly-chapters-en.tex  projekt-20-literatura-bibliography.bib  projekt.tex  runs.md
scripts/: _figstyle.py  analyze_middle_expert.py  analyze_neural_vs_lmmse.py  analyze_router_mechanism.py  analyze_static_baselines.py  arrow_to_pt.py  benchmark_latency.py  benchmark_loader.py  create_wandb_report.py  evaluate.py  evaluate_inference_mask.py  evaluate_lmmse.py  export_train_shards.py  export_train_subset.py  export_train_subset_job.sh  generate_checkpoint_figures.py  generate_datasets.py  generate_deepmimo_dataset.py  generate_snr_routing_figures.py  interactive_env.sh  metacentrum_interactive.sh  metacentrum_job.sh  metacentrum_setup.sh  plot_pareto_report.py  plot_per_snr_routing.py  plot_routing_trajectories.py  plot_specialization_clean.py  plot_trajectories_clean.py  plot_wakeup_clean.py  predownload_hf.sh  profile_dataloader.py  visualize_channel_features.py  (+4 more)
(+272 files in other folders)
